--- a/src/pages/financeiro/financeiro.html
+++ b/src/pages/financeiro/financeiro.html
@@ -1,5 +1,5 @@
-<ion-header no-border>
-  <ion-navbar >
+<ion-header no-border >
+  <ion-navbar [color]="soma < '0' ? 'red' : 'ligth'" >
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
