--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -28,7 +28,14 @@
         <button menuClose ion-item (click)="openFinanceiro()" >
           <ion-icon name="ios-arrow-forward" item-right></ion-icon>
         
-          <span>Finaceiro</span>
+          <span>Movimentações</span>
+        </button>
+
+
+        <button menuClose ion-item (click)="openCadFinanceiro()" >
+          <ion-icon name="ios-arrow-forward" item-right></ion-icon>
+        
+          <span>Caixa</span>
         </button>
 
 
