--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,12 +1,55 @@
-<ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
+<ion-header [color]="soma < '0' ? 'red' : 'marinho'">
+  <ion-navbar [color]="soma <'0' ? 'red' : 'marinho'" hideBackButton="true">
+    <ion-label style="text-align:right; font-size: 16px;" [color]="soma < '0' ? 'secondary' : 'laranja'">
+      {{ soma | currency: 'BRL' }}</ion-label>
+    <button ion-button menuToggle > 
       <ion-icon name="menu"></ion-icon>
+     <span class="cor"> Lucro </span> 
     </button>
-    <ion-title>home</ion-title>
+
+
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content>
+   
+    <ion-card-header >
+      Movimentações ...
+    </ion-card-header>
+
+      <canvas #pieCanvas></canvas>
+
+<div *ngIf="fluxos.length > '0' ; else vazio">
+
+  <ion-list>
+    <ion-item *ngFor="let item of fluxos">
+
+      
+
+      <ion-icon name="square" item-start class="icone"
+        [color]="item.status == '1' ? 'primary' 
+                                               : item.status == '2' ? 'rosa' 
+                                               : item.status == '3' ? 'red' 
+                                               : item.status  == '4' ? 'secondary' : 'amarelo'"></ion-icon>
+
+      <span item-start class="tamanho">{{item.descricao}}</span>
+      <span item-end class="tamanho">{{item.total | currency : 'BRL'}}</span>
+
+    </ion-item>
+  </ion-list>
+
+
+</div>
+
+<ng-template #vazio>
+
+  <ion-card>
+    <ion-item>
+      <h3 style="text-align: center;">Menhuma Movimentação</h3>
+    </ion-item>
+  </ion-card>
+
+</ng-template>
+  
 
 </ion-content>
