--- a/src/pages/conta-pagar/conta-pagar.html
+++ b/src/pages/conta-pagar/conta-pagar.html
@@ -1,8 +1,10 @@
 <ion-header no-border >
   <ion-navbar [color]="soma < '0' ? 'red' : 'marinho'" >
-    
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
    
-    <ion-title style="text-align:left;"> <span class="cor">Movimentações  </span> </ion-title>
+    <span style="color: cornsilk;">Contas a Pagar  </span>
 
     <ion-searchbar placeholder="Pesquisar" *ngIf="isSearchbarOpened" showCancelButton="true"
       (ionCancel)="isSearchbarOpened=false" (ionInput)="getFinanceiro($event)">
@@ -30,16 +32,16 @@
 
   </ion-refresher>
 
-  <div *ngIf="financeiros.length > '0'; else vazio">
+  <div *ngIf="contas.length > '0'; else vazio">
 
     <ion-list>
-      <ion-item *ngFor="let item of financeiros">
+      <ion-item *ngFor="let item of contas">
 
         <ion-icon style="font-size: 16px;" name="square" item-start
                   [color]="item.status == '1' ? 'secondary' : 'red'"></ion-icon>
     
         <ion-label>{{item.categoria}}  
-        <p style="font-size: 10px;">{{item.previsao_pag | date : 'dd/MM/yyyy'}} - {{item.valor | currency : 'BRL'}}</p></ion-label> 
+        <p style="font-size: 10px;">{{item.data | date : 'dd/MM/yyyy'}} - {{item.valor | currency : 'BRL'}}</p></ion-label> 
 
 
         <ion-badge item-end [color]="item.vencimento <= '3' ? 'red' : 'laranja'">
