--- a/src/pages/conta-recebe/conta-recebe.html
+++ b/src/pages/conta-recebe/conta-recebe.html
@@ -1,8 +1,10 @@
 <ion-header no-border >
-  <ion-navbar [color]="soma < '0' ? 'red' : 'marinho'" >
-    
+  <ion-navbar [color]="soma > '0' ? 'secondary' : 'marinho'" >
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
    
-    <ion-title style="text-align:left;"> <span class="cor">Movimentações  </span> </ion-title>
+    <span style="color: cornsilk;">Contas a Receber  </span>
 
     <ion-searchbar placeholder="Pesquisar" *ngIf="isSearchbarOpened" showCancelButton="true"
       (ionCancel)="isSearchbarOpened=false" (ionInput)="getFinanceiro($event)">
@@ -11,8 +13,8 @@
     <ion-buttons start>
 
       <button ion-button icon-only *ngIf="!isSearchbarOpened" (click)="isSearchbarOpened=true">
-        <span style="color:#fda500"> {{soma | currency: 'BRL'}} </span>
-        <ion-icon style="color:#fda500" name="search"></ion-icon>
+        <ion-label [color]="soma > '0' ? 'escuro' : 'laranja'" > {{soma | currency: 'BRL'}} </ion-label> 
+        <ion-icon  [color]="soma > '0' ? 'escuro' : 'laranja'" name="search"></ion-icon>
       </button>
     </ion-buttons>
 
@@ -30,16 +32,16 @@
 
   </ion-refresher>
 
-  <div *ngIf="financeiros.length > '0'; else vazio">
+  <div *ngIf="contas.length > '0'; else vazio">
 
     <ion-list>
-      <ion-item *ngFor="let item of financeiros">
+      <ion-item *ngFor="let item of contas">
 
         <ion-icon style="font-size: 16px;" name="square" item-start
                   [color]="item.status == '1' ? 'secondary' : 'red'"></ion-icon>
     
         <ion-label>{{item.categoria}}  
-        <p style="font-size: 10px;">{{item.previsao_pag | date : 'dd/MM/yyyy'}} - {{item.valor | currency : 'BRL'}}</p></ion-label> 
+        <p style="font-size: 10px;">{{item.data | date : 'dd/MM/yyyy'}} - {{item.valor | currency : 'BRL'}}</p></ion-label> 
 
 
         <ion-badge item-end [color]="item.vencimento <= '3' ? 'red' : 'laranja'">
